updating all details

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am a web developer...</p>
-      <h1>Houston, TX</h1>
-      <p>Details here...</p>
+      <h1>Where I'm From</h1>
+      <p>Houston, TX...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hobbies away from my MacBook- I enjoy cooking, dancing, watching movies, and playing board games with my boys...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web & Application Developer...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Houston, TX...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I enjoy learning different languges including coding, a language that not everyone can easily understand. Most importantly to have control under my fingertips...</p>
     </section>
 
     <footer id="footer">
